--- a/TravelApp/Cart.storyboard
+++ b/TravelApp/Cart.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="n3k-Ve-TCJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="n3k-Ve-TCJ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -28,13 +28,13 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="aFh-8l-iJW">
                                     <size key="itemSize" width="178" height="178"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="headerReferenceSize" width="50" height="70"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cartCell" id="yvY-oT-hlr" customClass="CartCollectionViewCell" customModule="TravelApp" customModuleProvider="target">
-                                        <rect key="frame" x="5" y="0.0" width="178" height="178"/>
+                                        <rect key="frame" x="5" y="70" width="178" height="178"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="178" height="178"/>
@@ -136,6 +136,27 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cartHeader" id="EYh-6P-noJ" customClass="CartCollectionReusableView" customModule="TravelApp" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iH5-I1-MiD">
+                                            <rect key="frame" x="8" y="8" width="272" height="54"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="topMargin" secondItem="iH5-I1-MiD" secondAttribute="top" id="3yT-Tb-dhW"/>
+                                        <constraint firstAttribute="leadingMargin" secondItem="iH5-I1-MiD" secondAttribute="leading" id="5Fc-7h-5xT"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="iH5-I1-MiD" secondAttribute="trailing" constant="87" id="E8Y-7m-IaA"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="iH5-I1-MiD" secondAttribute="bottom" id="e0F-Ul-LVK"/>
+                                    </constraints>
+                                    <connections>
+                                        <outlet property="headerTitle" destination="iH5-I1-MiD" id="YUi-qy-Ffg"/>
+                                    </connections>
+                                </collectionReusableView>
                                 <connections>
                                     <outlet property="dataSource" destination="n3k-Ve-TCJ" id="JgA-ig-1pS"/>
                                     <outlet property="delegate" destination="n3k-Ve-TCJ" id="rcr-Bw-OTL"/>
