--- a/TravelApp/CardSwipe.storyboard
+++ b/TravelApp/CardSwipe.storyboard
@@ -36,7 +36,7 @@
                     <view key="view" contentMode="scaleToFill" id="dBi-SM-RzF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="wj8-KV-2Wp"/>
                 </viewController>
