--- a/TravelApp/DetailView.xib
+++ b/TravelApp/DetailView.xib
@@ -37,9 +37,21 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RXB-jP-5bZ">
+                    <rect key="frame" x="141" y="570" width="92" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="92" id="Bqj-Uh-jlt"/>
+                        <constraint firstAttribute="height" constant="30" id="hPx-6m-tpM"/>
+                    </constraints>
+                    <state key="normal" title="More details"/>
+                    <connections>
+                        <action selector="search:" destination="-1" eventType="touchUpInside" id="HJ0-8J-q3q"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="RXB-jP-5bZ" secondAttribute="trailing" constant="142" id="A77-tH-7Di"/>
                 <constraint firstAttribute="trailing" secondItem="jlq-bj-XZm" secondAttribute="trailing" constant="16" id="H1g-ZH-vba"/>
                 <constraint firstItem="90u-QJ-yDQ" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="PXM-LG-cpu"/>
                 <constraint firstAttribute="trailing" secondItem="U1Y-Vq-dLf" secondAttribute="trailing" constant="16" id="TE4-nV-jXc"/>
@@ -49,8 +61,10 @@
                 <constraint firstAttribute="bottom" secondItem="90u-QJ-yDQ" secondAttribute="bottom" constant="241" id="av8-1u-Byj"/>
                 <constraint firstItem="jlq-bj-XZm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="cgf-lv-gS0"/>
                 <constraint firstItem="jlq-bj-XZm" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="40" id="dNd-Qt-2iE"/>
+                <constraint firstItem="RXB-jP-5bZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="141" id="f7F-ff-hAo"/>
                 <constraint firstItem="90u-QJ-yDQ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="kFb-Yu-9HJ"/>
                 <constraint firstItem="U1Y-Vq-dLf" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="129" id="nky-K4-5b9"/>
+                <constraint firstItem="RXB-jP-5bZ" firstAttribute="top" secondItem="90u-QJ-yDQ" secondAttribute="bottom" constant="38" id="p3K-kk-cY9"/>
                 <constraint firstAttribute="bottom" secondItem="U1Y-Vq-dLf" secondAttribute="bottom" constant="297" id="pTa-9u-6Sg"/>
             </constraints>
             <point key="canvasLocation" x="34.5" y="53.5"/>
